[project]
name = "entsoe_cli"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [ "requests>=2.32" ]

[tool.uv]
dev-dependencies = [
  "deptry",
  "pyright",
  "pytest",
  "ruff",
]

[tool.pytest.ini_options]
pythonpath = "."

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.13
target-version = "py313"

# All rules: https://beta.ruff.rs/docs/rules/
[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D203", "D213", # conflicts with other formatters
  "ISC001", "COM812", # conflicts with other formatters
]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = [
  "D", # documentation
  "ANN201", # type annotations not required
  "INP001", # no init
  "S101" # asserts
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.setuptools]
packages = ["entsoe_cli"]
